Write forced track flag to matroska files.

Based on a patch by Daniel Pielmeier, daniel pielmeier gmail
Fixes a part of ticket #1815.